test/parse/bad-delegate-label.txt
;;; TOOL: wat2wasm
;;; ARGS: --enable-exceptions
;;; ERROR: 1
(module
  (func
    try $t
      nop
    delegate $t
  )
)
(;; STDERR ;;;
out/test/parse/bad-delegate-label.txt:8:14: error: invalid label variable for try-delegate
    delegate $t
             ^^
;;; STDERR ;;)
